--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.24",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vercel/speed-insights": "^1.0.2",
     "antd": "^4.24.9",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
